patch: further fix to z-index to ensure search doesn't sit above chatbot at certain resolutions

--- a/src/StockportWebapp/wwwroot/assets/sass/cludo-search-semantic.scss
+++ b/src/StockportWebapp/wwwroot/assets/sass/cludo-search-semantic.scss
@@ -133,7 +133,7 @@
 #cludo-search-form, .cludo-search-form, .cludo-search_autocomplete {
   position: relative;
   margin: 0;
-  z-index: 9999999
+  z-index: 9999
 }
 
 #cludo-search-form-content {
@@ -1250,7 +1250,7 @@
   #cludo-search-form, .cludo-search-form, .cludo-search_autocomplete {
     position: relative;
     margin: 0;
-    z-index: 9999999
+    z-index: 9999
   }
 
   #cludo-search-form-content {
